--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
 		<meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <meta name="viewport" c3ontent="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
@@ -102,7 +102,7 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/menu_styles.css">
 		
 	    <link rel="stylesheet" type="text/css" href="./CSS/menus.css">
-		<!--
+		
 	    <link rel="stylesheet" type="text/css" href="./CSS/multiple-css2.css">
         <link rel="stylesheet" type="text/css" href="./CSS/multiple-css3.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/nav-style.css">
@@ -117,7 +117,7 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/portraits-html5.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/portraits.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/position-video.css">
-        -->
+        
 		<link rel="stylesheet" type="text/css" href="./CSS/liquid-maxmin.css">
 
 	    <link rel="stylesheet" type="text/css" href="./CSS/print.css">
@@ -616,7 +616,7 @@
                                 <img id="paper-blue" class="circle" src="images/paper-blue.png">
                             </div><!-- end col-3 -->
                         </div><!-- end-col_8 -->
-                    </div><!-- end-.row -->
+                    </div><!-- end-.row -ivorce
                     <br class="clear">
 			
                     <div class="row" style="background-color: #00afe1;">
