--- a/index[1].html
+++ b/index[1].html
@@ -39,8 +39,19 @@
         <!-- Plugin CSS -->
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 	      <style>
-        
+            body { width:500px; margin:auto;
+            }
+            header, nav, article, footer { display:block;
+            }
+            header { width:500px; background-color:#FF9966; text-align:center; margin:auto;
+            }
+            nav { float:left; width:25%; background-color: #FF9966; margin-bottom:10px;
+            }
             article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
+            }
+           footer { clear:both; background-color:#FF9966; text-align:center;
+            }
+            h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
             }
         </style>
 	    <!--Add conditional Javascript-->
@@ -555,7 +566,7 @@
         </div> <!-- end col-3 -->
       </div> <!-- end class row -->
 
-      <div class="row" style="background-color: #E5EF3F;">
+      <div class="row" stayle="background-color: #E5EF3F;">
         <div class="col-10">
           <h2>We're flying around the globe</h2>
           <div id="news">
