--- a/membership.html
+++ b/membership.html
@@ -71,9 +71,8 @@
             <script src="js/html5.js" type="text/javascript"></script>
         <![endif]-->
 </head>
-
 <body>
-    <div class="wrapper">
+    <!-- <div class="wrapper"> -->
         <img class="logo" src="./img/flexy-logo.png">
         <div class="row">
             <div class="col-12">
@@ -114,8 +113,6 @@
         <div class="row">
             <div class="col-12" style="padding: 2%">
                 <div class="data" id="html5-ch1-7content">
-
-
                     <div class="row">
                         <div class="çol-12">
                             <img src="img/kite.png">
@@ -508,7 +505,7 @@
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
                     <br class="clear">
-                        <h3>Around town last night</h3>
+                        <!-- <h3>Around town last night</h3>
                         <div id="photos">
                             <a href="#" class="trigger">Image Gallery</a>
                             <ul id="photos_inner">
@@ -524,6 +521,7 @@
                                 <li><img alt="Mo' Fat" src="./images/mofat_400.jpg" /></li>
                             </ul>
                         </div>
+							-->
                         <div class="col-3">
                             <img id="globe" class="circle" src="images/globe.png" width="215px">
                         </div>
@@ -580,17 +578,15 @@
             <!-- Template Main JS File -->
             <script src="../orris0/main.js"></script>
 
-            <a href="https://orris0.github.io/orris0/membership.html"
-                class="back-to-top d-flex align-items-center justify-content-center"><i
-                    class="bi bi-arrow-up-short"></i></a>
-            <div class="col-12">
-                <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
-                    <p>&copy; Kite-It.</p>
+            <a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+                <div class="col-12">
+                    <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+                        <p>&copy; Kite-It.</p>
+                    </div>
                 </div>
-            </div>
-        </div><!-- end-content -->
-        </div><!-- end wrapper -->
-</body><!-- end body  -->
+            </div><!-- end-content -->
+         <!--    </div>end wrapper -->
+    </body><!-- end body  -->
 
 </html>
 
