--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
 		<meta charset="utf-8">
-	    <meta name="viewport" c3ontent="width=device-width, initial-scale=1.0">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
