--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
         <title>Gallery-page-Templates</title>
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+        <!-- Viewport for responsive web design -->
+        <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
+        <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="./scripts.js"></script>
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
+        <!-- <link rel="stylesheet" href="style.css"> 
+        <link rel="stylesheet" href="style[1].css"> -->
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+        <link rel="stylesheet" href="./nav[1].css">
+
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
