--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/gallery-ie7.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
         <link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
-	-->
+	--
         <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
         <!-- Viewport for responsive web design --
         <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
@@ -146,7 +146,7 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/shadow-paragraph-8-6b.css">
 
 	    <link rel="stylesheet" type="text/css" href="./CSS/sliding.css">
-	    <link rel="stylesheet" type="text/css" href="./CSS/squares-html5.css"> -->
+	    <link rel="stylesheet" type="text/css" href="./CSS/squares-html5.css"> --
 	    <link rel="stylesheet" type="text/css" href="./CSS/squaretabs.css">
 		<!--
 	    <link rel="stylesheet" type="text/css" href="./CSS/starter-page-style-2.css">
