--- a/about.html
+++ b/about.html
@@ -72,7 +72,8 @@
         <![endif]-->
 </head>
 <body>
-<img class="logo" src="./img/flexy-logo.png">
+<img class="l
+logo" src="./img/flexy-logo.png">
         <div class="row">
             <div class="col-12">
                 <nav role="navigation" class="data" id="nav">
