--- a/starter-page.html
+++ b/starter-page.html
@@ -120,11 +120,11 @@
                 <br class="clear">	
 				
 	            <div class="data" id="#html5-style-2content">
-                    <h2>Get ready for take off.</h2>
+                   <!-- <h2>Get ready for take off.</h2> -->
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
                             <img src="img/paper.png" ;>
-							<h2>Award winning accommodation, self catering or bed and breakfast</h2>
+							<!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> -->
                             <div id="leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
@@ -170,7 +170,7 @@
 
                     <div class="row" style="background-color: #F6931E;">
                         <div class="col-11">
-                            <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                           <!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> -->
                             <header class="data" id="gallery-pageheader">
                                 <h1>A full page roll-over gallery of greetings cards</h1>
                                 <h2>Hover the mouse over a small picture to see an enlarged version</h2>
