--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                    <!-- <h2>Get ready for take off.</h2> -->
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
-                            <img src="img/paper.png";>
+                            <img src="img/paper.png" ;>
 							<!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> -->
                             <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
@@ -178,6 +178,8 @@
                             </div><!--midcol closed-->
                         </div><!-- end col-11 -->
                     </div> <!-- end class row -->
+					
+                    <div class="row" style="background-color: #1abc9c;">
                         <div class="col-10">
                             <h2>We're flying around the globe</h2>
                             <div class="data" id="html5style2leftcol">
