--- a/membership.html
+++ b/membership.html
@@ -188,6 +188,8 @@
                             </div><!--midcol closed-->
                         </div><!-- end col-11 -->
                     </div> <!-- end class row -->
+					
+                    <div class="row" style="background-color: #1abc9c;">
                         <div class="col-10">
                             <h2>We're flying around the globe</h2>
                             <div class="data" id="html5style2leftcol">
