--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Gallery-page-Templates</title>
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+		<link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
 		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
         <!-- Viewport for responsive web design -->
         <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
