--- a/index.html
+++ b/index.html
@@ -279,10 +279,20 @@
                     <div class="row" style="background-color: #F6931E;">
                         <div class="col-11">
                            <!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> -->
-                            <header class="data" id="gallery-pageheader">
+							<header data-role="header" class="data" id="html5-ch1-7header">
+                        <!-- <div id="hdr"> changed to <header> -->
+                        <hgroup>
+                            <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit</h1>
+                            <h2 class="heading"><strong>StarTrackr!</strong></h2>
+                        </hgroup>
+                        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
+                            <br>Orris
+                        </p>
+                    </header>
+                           <!-- <header class="data" id="gallery-pageheader">
                                 <h1>A full page roll-over gallery of greetings cards</h1>
                                 <h2>Hover the mouse over a small picture to see an enlarged version</h2>
-                            </header>
+                            </header> -->
                             <nav class="data" id="gallery-pagenav">
                                 <ul>
                                     <li class="btn"><a href="#">Page Two</a></li>
@@ -327,20 +337,10 @@
                             </div><!--midcol closed-->
                         </div><!-- end col-11 -->
                     </div> <!-- end class row -->
-	    <!-- <div class="wrapper"> --
-            <img class="logo" src="./img/flexy-logo.png">
+	    <!-- 
 			<div class="row">
                 <div class="col-12">
-                    <header data-role="header" class="data" id="html5-ch1-7header">
-                        <!-- <div id="hdr"> changed to <header> --
-                        <hgroup>
-                            <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit</h1>
-                            <h2 class="heading"><strong>StarTrackr!</strong></h2>
-                        </hgroup>
-                        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
-                            <br>Orris
-                        </p>
-                    </header>
+                    
                 </div><!-- end-col-12 --
             </div><!-- end-row --
             <br class="clear">
