--- a/index.html
+++ b/index.html
@@ -254,10 +254,11 @@
                         </div>
 		            </div>
                     <br class="clear">
+					
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
                             <img src="img/paper.png" ;>
-							<!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> -->
+							<h2>Award winning accommodation, self catering or bed and breakfast</h2> 
                             <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
