--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 							<h2>Award winning accommodation, self catering or bed and breakfast</h2> 
                             <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205059534026028.jpg" width="300">
                                 <br>The superb interior of one of our cottages
                             </div>
                             <nav class="data" id="html5-style-2nav"><!--use the semantic tag <nav>-->
