--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5-style-2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10205318197012441.jpg" height="229" width="398">
                             </div>
                         </div>
 		            </div>
