--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 		    <div id="wrapper"> 
 				<div class="row">
                     <div class="col-12">
-                        <nav role="navigation" class="data" id="nav">
+                        <nav role="navigation" id="nav" class="data">
                             <input class="trigger" type="checkbox" id="mainNavButton">
                             <label for="mainNavButton" onclick>Menu</label>
                             <ul>
@@ -236,7 +236,7 @@
 			
 				<div class="row">
                     <div class="col-12">
-				        <header data-role="header" class="data" id="html5-style-2header"><!-- <div id="hdr"> changed to <header> -->
+				        <header data-role="header" id="html5-style-2header" class="data"><!-- <div id="hdr"> changed to <header> -->
 				            <hgroup>  
 						        <h1 class="veryimportant heading stuff" id="html5-style-2h1">Tourorris Rural Retreats!</h1>
 						        <h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong></h2>
@@ -247,7 +247,7 @@
 					</div><!-- end-col-12 -->
                 </div><!-- end-row -->
 					
-	            <div class="data" id="#html5-style-2content">
+	            <div id="#html5-style-2content" class="data">
 					<div class="row">
                         <div class="col-12">
                             <img src="img/kite.png">
@@ -257,7 +257,7 @@
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
                                 <br>The superb interior of one of our cottages
                             </div>
-                            <nav class="data" id="html5-style-2nav"><!--use the semantic tag <nav>-->
+                            <nav id="html5-style-2nav" class="data"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
@@ -267,7 +267,7 @@
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
-                            <div class="data" id="html5-style-2midcol">
+                            <div id="html5-style-2midcol" class="data">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="images/10205318197012441.jpg" height="229" width="398">
                             </div>
