--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 					
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
-                            <img src="img/paper.png" ;>
+                            <img src="img/paper.png">
 							<h2>Award winning accommodation, self catering or bed and breakfast</h2> 
                             <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
