--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./images/10204240696195594.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
