--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./images/10204240696195594.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10204240696195594.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
@@ -618,7 +618,7 @@
                         <br>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205196736816012.jpg" width="300">
                             <br>
                             The superb interior of one of our cottages
                         </div><!-- end_left-col -->
@@ -634,7 +634,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="./bda-1.jpg" height="229" width="398">
+                            <img title="Devon countryside" alt="Devon countryside" src="images/10205283464504150.jpg" height="229" width="398">
                         </div>
                     </div><!-- end-col-12 -->
                 </div> <!-- end class row -->
@@ -646,7 +646,7 @@
                         <br>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-2.jpg" width="300">
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205283816712955.jpg" width="300">
                             <br>
                             The superb interior of one of our cottages
                         </div><!-- end_left-col -->
@@ -662,7 +662,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="./bda-2.jpg" height="229" width="398">
+                            <img title="Devon countryside" alt="Devon countryside" src="images/10205289710420294.jpg" height="229" width="398">
                         </div>
                         <div class="col-3">
                             <img class="circle" src="img/orange-globe.png">
@@ -677,8 +677,7 @@
                             <h2>We're flying around the globe</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205326059809006.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -694,7 +693,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10205468489529660.jpg" height="229" width="398">
                             </div>
                             <div class="col-3">
                                 <img id="waves" class="circle" src="images/waves.png">
@@ -709,7 +708,7 @@
                             <h2>Above the clouds &amp; over the sea.</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg"
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205480303825010.jpg"
                                     width="300">
                                 <br>
                                 The superb interior of one of our cottages
@@ -726,7 +725,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229"
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10205514191552182.jpg" height="229"
                                     width="398">
                             </div>
 
@@ -742,7 +741,7 @@
                             <h2>In just 42 hours and 27 minutes</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-7.jpg"
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205655819732798.jpg"
                                     width="300">
                                 <br>
                                 The superb interior of one of our cottages
@@ -759,8 +758,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-8.jpg" height="229"
-                                    width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10205691733510620.jpg" height="229" width="398">
                             </div>
                             <div class="col-3">
                                 <img id="paper-blue" class="circle" src="images/paper-blue.png">
