--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-10.jpg" height="229"
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10205779981916775.jpg" height="229"
                                     width="398">
                             </div>
                             <div class="col-3">
@@ -804,7 +804,7 @@
                             <img id="plane-background" src="./img/plane-background.png" width="935px">
 							<div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-16.jpg"
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205788598812192.jpg"
                                     width="300">
                                 <br>
                                 The superb interior of one of our cottages
@@ -821,7 +821,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-17.jpg" height="229"
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10205814158051157.jpg" height="229"
                                     width="398">
                             </div>
                         </div>
@@ -838,7 +838,7 @@
                         <div class="col-11">
 						    <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-18.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205905373851495.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -854,7 +854,7 @@
                            <!--</div> removed and replaced with </nav>-->
                            <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-19.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10205980577171531.jpg" height="229" width="398">
                             </div>
 							<div class="col-3">
                                 <img class="circle" src="./img/orange-globe.png">
@@ -885,7 +885,7 @@
                             <h2 class="heading">In just 42 hours and 27 minutes</h2>
 							<div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-16.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10206077418952515.jpg" width="300">
                                 <br>
 								The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -901,7 +901,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-20.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10206171308379692.jpg" height="229" width="398">
                             </div>
                             <div class="col-3">
                                 <img class="circle" src="img/paper-blue.png">
