--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
                             <h2>We're flying around the globe</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10206239438842911.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -200,7 +200,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10206357086704034.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
@@ -216,7 +216,7 @@
                             <img src="img/kite.png">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10206409624177438.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -232,7 +232,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10206420654933200.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
@@ -250,7 +250,7 @@
                             <br>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-1.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10206435337260249.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
