--- a/about.html
+++ b/about.html
@@ -266,7 +266,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-2.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10206438627422501.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
@@ -278,7 +278,7 @@
                             <br>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216784862911922.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -294,7 +294,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10216785048596564.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
@@ -309,7 +309,7 @@
                             <h2>We're flying around the globe</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216787016085750.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -325,7 +325,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10216791577999795.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
@@ -344,7 +344,7 @@
                             <h2>Above the clouds &amp; over the sea.</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-7.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216795072327151.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -360,7 +360,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-8.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10216795110848114.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
@@ -372,7 +372,7 @@
                             <h2>In just 42 hours and 27 minutes</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-8.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216795391415128.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -388,7 +388,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-9.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10216801333603679.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-8 -->
                     </div><!-- end-.row -->
@@ -399,7 +399,7 @@
                             <h2>So come along for the ride!</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-10.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216808137213765.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -415,7 +415,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-11.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10216808343058911.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
@@ -1056,7 +1056,7 @@
                             <img src="img/kite.png">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-13.jpg"
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216813367664523.jpg"
                                     width="300">
                                 <br>
                                 <p>The superb interior of one of our cottages</p>
